--- a/index.html
+++ b/index.html
@@ -93,9 +93,9 @@
             <button class="modal-dialog__title">Modálne okno</h4>
         </div>
     </div>
-
-    <!--<script src="src/js/main.js"></script>-->
+ 
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 
+    <script src="src/js/main.js"></script>
 </body>
 </html> 
