--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>HouseFix</title>
     <link rel="stylesheet" href="src/css/normalize.css">
+    <!--<link rel="stylesheet" href="src/css/slick-theme.css">-->
+    <link rel="stylesheet" href="src/css/slick.css">
     <link rel="stylesheet" href="src/css/style.css">
 </head>
 <body>
@@ -77,10 +79,41 @@
                     </form>
 
                     <span class="offer-call">Náš manažér vám zavolá
-                        v priebehu 60 sekúnd                     
+                        v priebehu 60 sekúnd <br>                    
                     </span>
                     <span class="offer-bid">Alebo nám zavolajte sami</span>
                         <a href="tel:+420777167699" class="offer__phone">+420 777 167 699</a>
+
+
+                    <section class="portfolio">
+                        <div class="container">
+                            <h2 class="section-title portfolio__title">
+                                Za dobu práce od roku 2007, <br>
+                                sme realizovali viac než 500 opráv bytov a domov
+                            </h2>
+
+                            <div class="slider">
+                                <div class="slider__item"><img class="slider__image" src="src/img/portfolio1.jpg" alt="Photo1"></div>
+                                <div class="slider__item"><img class="slider__image" src="src/img/portfolio2.jpg" alt="Photo2"></div>
+                                <div class="slider__item"><img class="slider__image" src="src/img/portfolio3.jpg" alt="Photo3"></div>
+                                <div class="slider__item"><img class="slider__image" src="src/img/portfolio1.jpg" alt="Photo4"></div>
+                                <div class="slider__item"><img class="slider__image" src="src/img/portfolio2.jpg" alt="Photo5"></div>
+                                <div class="slider__item"><img class="slider__image" src="src/img/portfolio3.jpg" alt="Photo6"></div>   
+                            </div>
+
+                            <div class="arrows portfolio__arrows">
+                                <div class="arrows__left">
+                                    <img src="src/img/left-arrow.png" alt="">
+                                </div>
+                                <div class="arrows__right">
+                                    <img src="src/img/right-arrow.png" alt="">
+                                </div>
+                            </div>
+
+                        </div>
+                    </section>
+
+                    
                 </div>
             </div>    
         </section> 
@@ -95,7 +128,7 @@
     </div>
  
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-
+    <script src="src/js/slick.min.js"></script>
     <script src="src/js/main.js"></script>
 </body>
 </html> 
