--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                         v priebehu 60 sekúnd <br>                    
                     </span>
                     <span class="offer-bid">Alebo nám zavolajte sami</span>
-                        <a href="tel:+420777167699" class="offer__phone">+420 777 167 699</a>
+                    <a href="tel:+420777167699" class="offer__phone">+420 777 167 699</a>
 
 
                     <section class="portfolio">
@@ -113,11 +113,105 @@
                         </div>
                     </section>
 
+                    <section class="price">
+                        <div class="container">
+                            <h2 class="section-title price__title">Máme velmi flexibilný systém zliav <br> 
+                                pre komplexné práce!</h2>
+                            <span class="section-subtitle price__subtitle">Ceny za naše služby</span>
+                            <div class="cards">
+                                <div class="card price__card">
+                                    <div class="card__image">
+                                        <img src="src/img/price1.png" alt="Bathroom">
+                                    </div>
+                                    <div class="card__text">
+                                        <h4 class="card__title">
+                                            Rekonštrukcia kúpeľní a a toaliet
+                                        </h4>
+                                        <a href="#" class="card__link">
+                                            Zistiť ceny
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="card price__card">
+                                    <div class="card__image">
+                                        <img src="src/img/price2.jpg" alt="Living Room">
+                                    </div>
+                                    <div class="card__text">
+                                        <h4 class="card__title">
+                                            Rekonštrukcia izieb a apartmánov
+                                        </h4>
+                                        <a href="#" class="card__link">
+                                            Zistiť ceny
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="card price__card">
+                                    <div class="card__image">
+                                        <img src="src/img/price3.png" alt="Living Room2">
+                                    </div>
+                                    <div class="card__text">
+                                        <h4 class="card__title">
+                                            Výzdoba kancelárskych priestorov
+                                        </h4>
+                                        <a href="#" class="card__link">
+                                            Zistiť ceny
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="card price__card">
+                                    <div class="card__image">
+                                        <img src="src/img/price4.png" alt="Hallway">
+                                    </div>
+                                    <div class="card__text">
+                                        <h4 class="card__title">
+                                            Rekonštrukcia v nových budovách
+                                        </h4>
+                                        <a href="#" class="card__link">
+                                            Zistiť ceny
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="card price__card">
+                                    <div class="card__image">
+                                        <img src="src/img/price5.png" alt="Kitchen">
+                                    </div>
+                                    <div class="card__text">
+                                        <h4 class="card__title">
+                                            Renovácia kuchyne
+                                        </h4>
+                                        <a href="#" class="card__link">
+                                            Zistiť ceny
+                                        </a>
+                                    </div>
+                                </div>
+
+                                <div class="card price__card">
+                                    <div class="card__image">
+                                        <img src="src/img/price6.png" alt="BedRoom">
+                                    </div>
+                                    <div class="card__text">
+                                        <h4 class="card__title">
+                                            Opravy chát a chalúp
+                                        </h4>
+                                        <a href="#" class="card__link">
+                                            Zistiť ceny
+                                        </a>
+                                    </div>
+                                </div>
+
+                            </div>
+                        </div>
+                    </section>
+
                     
                 </div>
             </div>    
         </section> 
-
+      
     </main>
 
     <div class="modal" id="modal">
